[package]
name = "retro-cell"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "A concurrent single-writer multi-reader (SWMR) data structure that allows lock-free reads and supports retroactive (historical) access."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/retro-cell"
homepage = "https://github.com/ShaoG-R/retro-cell"
documentation = "https://docs.rs/retro-cell"
keywords = ["concurrent", "lock-free", "retroactive", "data-structure"]
categories = ["concurrency", "data-structures"]

[dependencies]
atomic-wait = "1.1.0"
loom = { version = "0.7", optional = true }

[features]
default = []
loom = ["dep:loom"]

[dev-dependencies]
criterion = "0.7.0"
arc-swap = "1.7.1"

[[bench]]
name = "performance"
harness = false
